# grpc-movie-search

./: .gitignore  CMakeLists.txt  README.md  analyze_performance.py  test_configurations.sh
client/: client.cpp  python_client.py
performance_charts/: performance_report.txt  summary_statistics.csv
performance_results/: multi_node_grpc_cache_results.csv  multi_node_grpc_no_cache_results.csv  single_node_grpc_cache_results.csv  single_node_grpc_no_cache_results.csv  single_node_shm_cache_results.csv  single_node_shm_no_cache_results.csv
proto/: movie.proto
scripts/: performance_test.cpp  test_cache_shm.cpp  test_movie_search.cpp  test_overlay.sh
server/: A_server.cpp  B_server.cpp  C_server.cpp  D_server.cpp  E_server.cpp  ab_communication.cpp  ab_communication.h  cache.h  movie_struct.h  posix_shared_memory.h  response_serializer.h
